# pong-ia-public

./: .gitignore  CHANGELOG.md  LICENSE  PongIA.spec  README.md  main.py  models.toml.example  pong.py  pyproject.toml  requirements.txt  seed_node.py
.github/workflows/: build-binaries.yml  tests.yml  type-check.yml
assets/images/: achievement_icons_preview_index_map.txt  icon.icns
assets/music/: main_theme.mid
docs/: build-executables.md  development_report.ipynb  development_report_V0.10.ipynb  game_harness.md  image_generation_research.md  llm_cpu_legacy_compatibility.md  local_model_options.md  logging.md  pongia-seed.service  profiling.md  rpg_system.md  save_integrity.md  secrets.md
pong/: __init__.py  achievement_icons.py  achievements.py  benchmark.py  bpe_tokenizer.py  crypto.py  emotional_state.py  entities.py  exceptions.py  game.py  game_ai.py  game_imagegen.py  game_persistence.py  game_rpg.py  game_state.py  harness.py  image_generator.py  leaderboard.py  model_downloader.py  music.py  narration_bridge.py  narrator.py  narrator_questions.py  narrator_summary.py  onnx_provider.py  p2p.py  p2p_cache.py  perf.py  protocols.py  providers.py  punch.py  question_system.py  renderer.py  renderer_achievements.py  renderer_end_screen.py  renderer_leaderboard.py  renderer_rpg.py  rpg_engine.py  save_manager.py  scoring.py  (+4 more)
pong/config/: __init__.py  colors.py  gameplay.py  layout.py  llm_tiers.py  media.py  models.py  narrator.py  rpg.py  ui_achievements.py  ui_end_screen.py  ui_leaderboard.py  ui_rpg.py  version.py  zx_spectrum.py
scripts/: bootstrap_local_model.sh  build_with_pyinstaller.py  capture_screenshots.py  create_dmg.sh  create_installer_win.iss  create_zip_win.py  generate_icons.py  profile_game.py
tests/: conftest.py  test_achievement_icons.py  test_achievements.py  test_avx2_detection.py  test_benchmark.py  test_bpe_tokenizer.py  test_crypto.py  test_emotional_state.py  test_entities.py  test_exceptions.py  test_game_ai.py  test_game_copy_logs.py  test_game_p2p_sync.py  test_harness.py  test_idle_detection.py  test_integration.py  test_leaderboard.py  test_llm_tiers.py  test_model_downloader.py  test_models_config.py  test_music.py  test_narration_bridge_summary.py  test_narrator_questions.py  test_narrator_questions_extra.py  test_narrator_summary.py  test_onnx_provider.py  test_onnx_tier.py  test_p2p.py  test_perf.py  test_protocols.py  test_providers.py  test_punch.py  test_question_system.py  test_renderer_llm_status.py  test_rpg_engine.py  test_save_manager.py  test_scoring.py  test_security.py  test_theme.py  test_tier0_fallback.py
