[project]
name = "pong-ia"
version = "0.10"
requires-python = ">=3.10"
dependencies = [
    "certifi>=2023.0.0",
    "psutil>=5.9.0",
    "PyNaCl>=1.5.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.entry-points."pong_ia.llm"]
local = "pong.providers:LocalLLMProvider"

[project.entry-points."pong_ia.imagegen"]
local = "pong.image_generator:ImageGenerator"

[tool.mypy]
python_version = "3.10"
files = ["pong", "tests"]
strict = true

[[tool.mypy.overrides]]
module = [
    "llama_cpp",
    "llama_cpp.*",
    "mido",
    "mido.*",
    "diffusers",
    "diffusers.*",
    "huggingface_hub",
    "huggingface_hub.*",
    "torch",
    "torch.*",
    "transformers",
    "transformers.*",
    "accelerate",
    "accelerate.*",
    "safetensors",
    "safetensors.*",
    "peft",
    "peft.*",
    "tomli",
    "tomli.*",
    "psutil",
    "psutil.*",
    "nacl",
    "nacl.*",
    "numpy",
    "numpy.*",
    "onnxruntime",
    "onnxruntime.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pong.image_generator"
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "pong.providers"
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "pong.onnx_provider"
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
addopts = "--tb=short -q"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.coverage.run]
source = ["pong"]
omit = [
    "pong/splash.py",
    "pong/benchmark.py",
    "pong/system_info.py",
    "pong/renderer_achievements.py",
    "pong/renderer_end_screen.py",
    "pong/renderer.py",
    "pong/achievement_icons.py",
    "pong/image_generator.py",
    "pong/game_imagegen.py",
    "pong/game_rpg.py",
    "pong/renderer_rpg.py",
    "pong/narrator.py",
    "pong/narration_bridge.py",
    "pong/music.py",
    "pong/onnx_provider.py",
    "pong/p2p.py",
    "pong/renderer_leaderboard.py",
    "pong/game.py",
    "pong/game_persistence.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__",
]
